--- a/composer.json
+++ b/composer.json
@@ -8,24 +8,33 @@
 	],
 	"license" : "MIT",
 	"require" : {
-		"symfony/console" : "~2",
+		"php" : ">=5.4",
+		"composer/composer" : "@dev",
+		"propel/propel" : "2.0.0-alpha4",
 		"twig/twig" : "~1",
+		"symfony/console" : "~2",
+		"symfony/event-dispatcher" : "~2",
 		"symfony/finder" : "~2",
 		"symfony/filesystem" : "~2",
-		"propel/propel" : "dev-master@dev",
-		"symfony/event-dispatcher" : "~2",
-		"gossi/php-code-generator" : "dev-master",
-		"gossi/json" : "~1",
 		"symfony/process" : "~2",
-		"keeko/core" : "dev-master",
-		"composer/composer" : "@dev"
+		"gossi/php-code-generator" : "dev-master",
+		"phootwork/json" : "~1",
+		"phootwork/file" : "~0",
+		"keeko/core" : "dev-master"
 	},
 	"autoload" : {
 		"psr-4" : {
 			"keeko\\tools\\" : "src"
 		}
 	},
-	"extra" : {
-		"local" : "../../"
+	"autoload-dev" : {
+		"psr-4" : {
+			"keeko\\tools\\tests\\" : "tests"
+		}
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : "~4",
+		"mikey179/vfsStream" : "~1",
+		"keeko/composer-installer" : "0.21"
 	}
 }
