--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
 		"symfony/process" : "~2",
 		"gossi/php-code-generator" : "dev-master",
 		"phootwork/json" : "~1",
-		"phootwork/file" : "~0",
-		"keeko/core" : "dev-master"
+		"phootwork/file" : "~0"
 	},
 	"autoload" : {
 		"psr-4" : {
