--- a/.settings/com.dubture.composer.core.prefs
+++ b/.settings/com.dubture.composer.core.prefs
@@ -1,2 +1,2 @@
-com.dubture.composer.corebuildpath.includes.excludes=<buildpathentry excluding\="vendor/symfony/console/Symfony/Component/Console/Tests/" including\="core/src/|templates/|tests/" kind\="src" path\="vendor"/>\n
+com.dubture.composer.corebuildpath.includes.excludes=<buildpathentry excluding\="vendor/symfony/console/Symfony/Component/Console/Tests/" including\="templates/|tests/" kind\="src" path\="vendor"/>\n
 eclipse.preferences.version=1
