--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,16 @@
 		"composer/composer" : "@dev",
 		"propel/propel" : "2.0.0-alpha5",
 		"twig/twig" : "~1",
-		"symfony/console" : "~3",
-		"symfony/event-dispatcher" : "~3",
-		"symfony/finder" : "~3",
-		"symfony/process" : "~3",
-		"gossi/php-code-generator" : "dev-master",
-		"phootwork/json" : "~1",
-		"phootwork/file" : "~0",
 		"keeko/core" : "dev-master",
-		"gossi/swagger" : "dev-master"
+		"puli/composer-plugin": "@beta",
+		"symfony/console" : "~2|~3",
+		"symfony/event-dispatcher" : "~3",
+		"symfony/finder" : "~2|~3",
+		"symfony/process" : "~2|~3",
+		"gossi/php-code-generator" : "dev-master",
+		"gossi/swagger" : "dev-master",
+		"phootwork/json" : "~1",
+		"phootwork/file" : "~0"
 	},
 	"autoload" : {
 		"psr-4" : {
