--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,17 @@
 	"license" : "MIT",
 	"require" : {
 		"php" : ">=5.5",
+		"keeko/core" : "dev-master",
 		"composer/composer" : "@dev",
 		"propel/propel" : "2.0.0-alpha5",
+		"puli/composer-plugin" : "@beta",
 		"twig/twig" : "~1",
-		"keeko/core" : "dev-master",
-		"puli/composer-plugin": "@beta",
 		"symfony/console" : "~2|~3",
 		"symfony/event-dispatcher" : "~3",
 		"symfony/finder" : "~2|~3",
 		"symfony/process" : "~2|~3",
-		"gossi/php-code-generator" : "dev-master",
-		"gossi/swagger" : "dev-master",
+		"gossi/php-code-generator" : "~0",
+		"gossi/swagger" : "~0",
 		"phootwork/json" : "~1",
 		"phootwork/file" : "~0"
 	},
