revert to php 5.4

--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,18 @@
 	],
 	"license" : "MIT",
 	"require" : {
-		"php" : ">=5.5",
+		"php" : ">=5.4",
 		"keeko/core" : "dev-master",
 		"composer/composer" : "@dev",
 		"propel/propel" : "2.0.0-alpha5",
 		"puli/composer-plugin" : "@beta",
+		"puli/repository" : "@beta",
+		"puli/twig-extension" : "@beta",
+		"puli/url-generator" : "@beta",
+		"puli/discovery" : "@beta",
 		"twig/twig" : "~1",
 		"symfony/console" : "~2|~3",
-		"symfony/event-dispatcher" : "~3",
+		"symfony/event-dispatcher" : "~2|~3",
 		"symfony/finder" : "~2|~3",
 		"symfony/process" : "~2|~3",
 		"gossi/php-code-generator" : "~0",
